# lor

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
frontend/: .prettierrc  Dockerfile  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json
frontend/src/: App.svelte  app.css
frontend/src/lib/: Characters.svelte  ConfirmModal.svelte  Locations.svelte
migrations/: 002_added_characters.sql  003_added_locations.sql  004_added_data.sql  migrator.py
src/: main.py
src/database/: postgres.py
src/dto/: characters.py  errors.py  locations.py
src/routes/: characters.py  locations.py
src/storage/: characters.py  locations.py
test/: conftest.py  test_characters.py  test_locations.py
