[project]
name = "lor"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.118.3",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
